Add sum packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "allowJs": true,   // Allow compilation of plain JavaScript files
     "skipLibCheck": true,  // Skip type checking for library files (optional)
     "strict": true,    // Enable strict type checking
-    "outDir": "./dist"  // Output directory for compiled JavaScript files
+    "outDir": "./dist",  // Output directory for compiled JavaScript files
+    "downlevelIteration": true
   },
   "include": ["src/**/*"]  // Include all TypeScript files in the "src" directory for compilation
 }
