--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "npx webpack --mode development",
+    "build": "npx webpack --mode production",
     "test": "jest",
     "start": "webpack serve --config ./webpack.config.js --mode development --host 0.0.0.0"
   },
